# inventory

./: .gitignore  pyproject.toml
server/docker/: docker-compose.yml
